# UnlimitedAgent

./: .gitignore  README.md  asset_builder.py  config.py  config_tui.py  log.py  main.py  mod_base.py  pyproject.toml  scanning_gemini.py  test_db.py
ai_module/: base_ai_formatter.py  mod_gemini.py  mod_general.py  mod_ollama.py  mod_openai.py
backend/: aidj_rag.py  asset_builder.py  asset_builder_config.example.json  backend_base.py  gemini_ocr.py  gemini_ocr_config.example.json  scanning_gemini.py  scanning_gemini_config.example.json
db/: postgresql.py
